update food cat

--- a/src/app/dialogs/view-food/view-food.component.html
+++ b/src/app/dialogs/view-food/view-food.component.html
@@ -60,7 +60,7 @@
       </div>
       <div class="row">
         <div class="col col-md-12">
-          <button mat-raised-button color="primary" (click)="updateFood()" [disabled]="saveDisabled" style="width: 100%;">Save</button>
+          <button mat-raised-button color="primary" (click)="updateFood()" [disabled]="saveDisabled" style="width: 100%;">Update</button>
         </div>
       </div>
     </div>
