--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -1,3 +1,33 @@
-<p>
-  settings works!
-</p>
+<mat-card>
+  <mat-card-header>
+    <mat-icon class="icon-header">settings</mat-icon>
+    <h1 mat-dialog-title>Settings</h1>
+    <p>
+
+    </p>
+  </mat-card-header>
+  <mat-card-content>
+    <div class="row mainrow">
+      <div class="col col-md-3 shadow p-3 mb-5 bg-white rounded item-grid">
+        <img src="../../../assets/images/icons/1162499.svg" class="gridImg" (click)="openAddFoodCat()">
+        <div class="textTitle h5">ປະເພດສີນຄ້າ</div>
+      </div>
+      <div class="col col-md-3 shadow p-3 mb-5 bg-white rounded item-grid">
+        <img src="../../../assets/images/icons/delivery.svg" class="gridImg">
+        <div class="textTitle h5">ຜູ້ສະໜອງ</div>
+      </div>
+      <div class="col col-md-3 shadow p-3 mb-5 bg-white rounded item-grid">
+        <img src="../../../assets/images/icons/1162455.svg" class="gridImg">
+        <div class="textTitle h5">ຫົວໜ່ວຍ</div>
+      </div>
+      <div class="col col-md-3 shadow p-3 mb-5 bg-white rounded item-grid">
+        <img src="../../../assets/images/icons/265667.svg" class="gridImg">
+        <div class="textTitle h5">ຜູ້ໃຊ້</div>
+      </div>
+    </div>
+
+    <div class="row">
+
+    </div>
+  </mat-card-content>
+</mat-card>
