--- a/src/app/pages/foods/foods.component.css
+++ b/src/app/pages/foods/foods.component.css
@@ -1,4 +1,5 @@
 .example-header-image {
+
   background-image: url('../../../assets/icons/baseline-fastfood-24px.svg');
   background-size: cover;
 }
@@ -12,6 +13,8 @@
   margin-top: 10px;
 }
 .foodPhoto {
+  margin: 0;
+  border-radius: 5px;
   max-width: 100px;
 }
 .topDiv {
