update food cat maintain

--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -10,7 +10,7 @@
     <div class="row mainrow">
       <div class="col col-md-3 shadow p-3 mb-5 bg-white rounded item-grid">
         <img src="../../../assets/images/icons/1162499.svg" class="gridImg" (click)="openAddFoodCat()">
-        <div class="textTitle h5">ປະເພດສີນຄ້າ</div>
+        <div class="textTitle h5">ປະເພດອາຫານ</div>
       </div>
       <div class="col col-md-3 shadow p-3 mb-5 bg-white rounded item-grid">
         <img src="../../../assets/images/icons/delivery.svg" class="gridImg">
