--- a/src/app/dialogs/add-food-category/add-food-category.component.html
+++ b/src/app/dialogs/add-food-category/add-food-category.component.html
@@ -1,5 +1,5 @@
 <p class="h4">
-  ເພີ່ີມປະເພດອາຫານ
+  ເພີ່ມປະເພດອາຫານ
 </p>
 <form [formGroup]="foodCateForm">
   <div class="form-row">
@@ -12,18 +12,9 @@
       <input type="text" class="form-control" formControlName="foodCategoryNameLao" id="foodCategoryNameLao" required>
     </div>
     <div class="form-group col-md-12 text-right">
-      <div class="row">
-        <div class="col col-md-6">
-          <button mat-flat-button color="primary">Save</button>
-        </div>
-        <div class="col col-md-6">
-          <button mat-flat-button color="primary">Save</button>
-        </div>
-
-      </div>
-
+      <button mat-flat-button color="primary" style="width: 100px; margin-right: 5px;" (click)="addNewCate()">Add new</button>
+      <button mat-flat-button color="warn" style="width: 100px;" (click)="updateCat()">Update</button>
     </div>
-
   </div>
 </form>
 <div>
@@ -31,16 +22,19 @@
     <thead>
       <th class="text-left">ປະເພດອາຫານ ພາສາອັງກິດ</th>
       <th class="text-left">ປະເພດອາຫານ ພາສາ ລາວ</th>
+      <th class="text-left"></th>
     </thead>
     <tbody>
-      <tr *ngFor="let cat of FoodCategories|async" (click)="addUpdate(cat)">
+      <tr *ngFor="let cat of FoodCategories | async" (click)="addUpdate(cat)">
         <td class="text-left">{{ cat.foodCategoryName }}</td>
         <td class="text-left">{{ cat.foodCategoryNameLao }}</td>
+        <td class="text-center"><img src="../../../assets/icons/baseline-delete-24px.svg" style="cursor: pointer"
+            (click)="deleteCat(cat)"></td>
       </tr>
     </tbody>
     <tfoot>
       <tr>
-        <td [colSpan]="2"></td>
+        <td [colSpan]="3"></td>
       </tr>
     </tfoot>
   </table>
