--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -13,8 +13,8 @@
         <div class="textTitle h5">ປະເພດອາຫານ</div>
       </div>
       <div class="col col-md-3 shadow p-3 mb-5 bg-white rounded item-grid">
-        <img src="../../../assets/images/icons/delivery.svg" class="gridImg">
-        <div class="textTitle h5">ຜູ້ສະໜອງ</div>
+        <img src="../../../assets/images/icons/delivery.svg" class="gridImg" (click)="openExtendedFoodType()">
+        <div class="textTitle h5">ອາຫານຍ່ອຍ</div>
       </div>
       <div class="col col-md-3 shadow p-3 mb-5 bg-white rounded item-grid">
         <img src="../../../assets/images/icons/1162455.svg" class="gridImg">
