--- a/src/app/dialogs/view-food/view-food.component.html
+++ b/src/app/dialogs/view-food/view-food.component.html
@@ -25,7 +25,8 @@
           <label for="food_category">ຈັດໃນໝວດ</label>
           <select class="form-control" id="food_category" required formControlName="food_category">
             <option value="" disabled>-----------</option>
-            <option *ngFor="let c of categories |async" value="{{ c.foodCategoryNameLao }}">{{ c.foodCategoryNameLao }}</option>
+            <option *ngFor="let c of categories |async" value="{{ c.foodCategoryNameLao }}">{{ c.foodCategoryNameLao }}
+            </option>
           </select>
         </div>
         <div class="form-group col-md-6">
@@ -53,13 +54,14 @@
           <label for="parent_food">ປະເພດ</label>
           <select class="form-control" id="parent_food" required formControlName="parent_food">
             <option value="common">common</option>
-            <option value="parental">parental Food</option>
+            <option value="master">parental Food</option>
           </select>
         </div>
       </div>
       <div class="row">
         <div class="col col-md-12">
-          <button mat-raised-button color="primary" (click)="updateFood()" [disabled]="saveDisabled" style="width: 100%;">Update</button>
+          <button mat-raised-button color="primary" (click)="updateFood()" [disabled]="saveDisabled"
+            style="width: 100%;">Update</button>
         </div>
       </div>
     </div>
