--- a/src/app/dialogs/view-food/view-food.component.html
+++ b/src/app/dialogs/view-food/view-food.component.html
@@ -54,8 +54,12 @@
           <label for="parent_food">ປະເພດ</label>
           <select class="form-control" id="parent_food" required formControlName="parent_food">
             <option value="common">common</option>
-            <option value="master">parental Food</option>
+            <option value="master">master</option>
           </select>
+        </div>
+        <div class="form-group col-md-6">
+          <label for="noted">ໝາຍເຫດ</label>
+          <input type="text" class="form-control" id="noted" formControlName="noted">
         </div>
       </div>
       <div class="row">
