--- a/src/app/dialogs/view-extended-food/view-extended-food.component.html
+++ b/src/app/dialogs/view-extended-food/view-extended-food.component.html
@@ -26,8 +26,7 @@
         </div>
         <div class="form-group col-md-2">
           <label for="addBtn">ເພີ່ມ</label>
-          <button mat-flat-button color="primary" class="form-control" id="addBtn"
-            (click)="addExtendedFood()">Add</button>
+          <button mat-flat-button color="primary" class="form-control" id="addBtn">Add</button>
         </div>
       </div>
     </mat-card-content>
@@ -45,7 +44,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let extendedFoodList of extendedFoodLists">
+          <tr *ngFor="let extendedFoodList of extendedFoodLists" (click)="updateFood(extendedFoodList)">
             <td class="text-left">{{ extendedFoodList.extendedFoodName }}</td>
             <td class="text-right">{{ extendedFoodList.cost |number }}</td>
             <td class="text-right">{{ extendedFoodList.price | number}}</td>
@@ -64,8 +63,8 @@
     <mat-card-footer>
       <div class="row">
         <div class="col col-md-12 text-right">
-          <button mat-flat-button color="primary" (click)="addExtendedFoodToMaster()"
-            style="margin-bottom: 5px;margin-right: 15px;width: 110px;">Save</button>
+          <button mat-flat-button color="warn"
+            style="margin-bottom: 5px;margin-right: 15px;width: 110px;">Update</button>
         </div>
       </div>
     </mat-card-footer>
