udpate food cat

--- a/src/app/dialogs/add-food-category/add-food-category.component.html
+++ b/src/app/dialogs/add-food-category/add-food-category.component.html
@@ -12,13 +12,14 @@
       <input type="text" class="form-control" formControlName="foodCategoryNameLao" id="foodCategoryNameLao" required>
     </div>
     <div class="form-group col-md-12 text-right">
-      <button mat-flat-button color="primary" style="width: 100px; margin-right: 5px;" (click)="addNewCate()">Add new</button>
+      <button mat-flat-button color="primary" style="width: 100px; margin-right: 5px;" (click)="addNewCate()">Add
+        new</button>
       <button mat-flat-button color="warn" style="width: 100px;" (click)="updateCat()">Update</button>
     </div>
   </div>
 </form>
-<div>
-  <table class="table  table-bordered table-hover">
+<div class="foodCatDiv">
+  <table class="table table-bordered table-hover ">
     <thead>
       <th class="text-left">ປະເພດອາຫານ ພາສາອັງກິດ</th>
       <th class="text-left">ປະເພດອາຫານ ພາສາ ລາວ</th>
