update food page done

--- a/src/app/dialogs/add-extended-food/add-extended-food.component.html
+++ b/src/app/dialogs/add-extended-food/add-extended-food.component.html
@@ -51,7 +51,7 @@
             <td class="text-right">{{ extendedFoodList.price | number}}</td>
             <td class="text-left">{{ extendedFoodList.noted }}</td>
             <td class="text-center"><img src="../../../assets/icons/baseline-delete-24px.svg" style="cursor: pointer"
-                (click)="removeExtenedFoodList(extendedFoodList)"></td>
+                (click)="removeitem(extendedFoodList)"></td>
           </tr>
         </tbody>
         <tfoot>
