--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -17,8 +17,8 @@
         <div class="textTitle h5">ອາຫານຍ່ອຍ</div>
       </div>
       <div class="col col-md-3 shadow p-3 mb-5 bg-white rounded item-grid">
-        <img src="../../../assets/images/icons/1162455.svg" class="gridImg">
-        <div class="textTitle h5">ຫົວໜ່ວຍ</div>
+        <img src="../../../assets/images/icons/1162455.svg" class="gridImg" (click)="openTicketMainternance()">
+        <div class="textTitle h5">Ticket</div>
       </div>
       <div class="col col-md-3 shadow p-3 mb-5 bg-white rounded item-grid">
         <img src="../../../assets/images/icons/265667.svg" class="gridImg">
