--- a/src/app/pages/pos/pos.component.html
+++ b/src/app/pages/pos/pos.component.html
@@ -3,11 +3,10 @@
     <mat-card-content>
       <div class="row">
         <div class="col col-md-7">
-          <mat-tab-group class="mat-tabBody">
+          <mat-tab-group class="mat-tabBody" (selectedTabChange)="selectedTabFilter($event)">
             <mat-tab *ngFor="let foodCategory of FoodCategories |async" label="{{ foodCategory.foodCategoryNameLao }}">
               <div class="row main-container">
-                <div class="col col-sm-12 col-md-3 shadow p-3 mb-5 bg-white rounded item text-center"
-                  *ngFor="let food of foods | async">
+                <div class="col col-sm-12 col-md-3 shadow item text-center" *ngFor="let food of foods | async">
                   <div class="pricetag">
                     <span class="h5" *ngIf="food.price != 0; else choosePrice">{{ food.price | number}}</span>
                     <ng-template #choosePrice>
@@ -27,14 +26,15 @@
         <div class="col col-md-5">
           <mat-card>
             <mat-card-title>ອາຫານທີ່ເລຶອກໄວ້ </mat-card-title>
+            <mat-divider></mat-divider>
             <mat-card-content>
               <mat-list>
                 <mat-list-item>
                   <div class="row" style="width: 100%;">
                     <div class="col col-md-3 text-left">ອາຫານ</div>
                     <div class="col col-md-2 text-right">ຈຳນວນ</div>
-                    <div class="col col-md-2 text-center">ລາຄາ</div>
-                    <div class="col col-md-2 text-center">ລວມ</div>
+                    <div class="col col-md-2 text-right">ລາຄາ</div>
+                    <div class="col col-md-2 text-right">ລວມ</div>
                     <div class="col col-md-2 text-center">Note</div>
                     <div class="col col-md-1 text-right"></div>
                   </div>
@@ -62,8 +62,7 @@
                   <div class="row">
                     <div class="col col-md-9 text-right h5" style="position: absolute; right:150px;">ຍອດລວມ</div>
                     <div class="
-                      col col-md-3 text-right h5" style="position: absolute; right:10px;">{{
-                      total | number }}</div>
+                      col col-md-3 text-right h5" style="position: absolute; right:10px;">{{ total | number }}</div>
                   </div>
                 </mat-list-item>
               </mat-list>
@@ -73,11 +72,9 @@
             <mat-card-title>Payment</mat-card-title>
             <mat-card-content>
               <div class="row">
-                <div class="col col-md-6">
-                  <button mat-flat-button color="primary" style="width: 100%;">Cash</button>
-                </div>
-                <div class="col col-md-6">
-                  <button mat-flat-button color="primary" style="width: 100%;">Bank</button>
+                <div class="col col-md-12">
+                  <button mat-flat-button color="primary" style="width: 100%; height: 50px;"
+                    (click)="openPaymentCash()">Cash</button>
                 </div>
               </div>
             </mat-card-content>
@@ -85,5 +82,4 @@
         </div>
       </div>
     </mat-card-content>
-
   </mat-card>
