--- a/src/app/pages/pos/pos.component.html
+++ b/src/app/pages/pos/pos.component.html
@@ -74,7 +74,7 @@
               <div class="row">
                 <div class="col col-md-12">
                   <button mat-flat-button color="primary" style="width: 100%; height: 50px;"
-                    (click)="openPaymentCash()">Cash</button>
+                    [disabled]="disablePaymentBtn" (click)="openPaymentCash()">Cash</button>
                 </div>
               </div>
             </mat-card-content>
