--- a/src/app/pages/pos/pos.component.css
+++ b/src/app/pages/pos/pos.component.css
@@ -54,6 +54,7 @@
 .main-container {
   height: 100%;
   overflow: auto;
+  width: 100%;
 }
 .mat-tabBody {
   max-height: 800px;
@@ -67,3 +68,7 @@
   max-height: 500px;
   overflow:auto;
 }
+.mainPaymentDiv {
+  min-height: 550px;
+}
+
