--- a/src/app/pages/pos/pos.component.html
+++ b/src/app/pages/pos/pos.component.html
@@ -3,7 +3,24 @@
     <mat-card-content>
       <div class="row">
         <div class="col col-md-7">
-          <mat-tab-group class="mat-tabBody" (selectedTabChange)="selectedTabFilter($event)">
+          <mat-tab-group class="mat-tabBody" (selectedTabChange)="loadFoodPage($event)">
+            <mat-tab label="ທັງໝົດ">
+              <div class="row main-container">
+                <div class="col col-sm-12 col-md-3 shadow item text-center" *ngFor="let food of foods | async">
+                  <div class="pricetag">
+                    <span class="h5" *ngIf="food.price != 0; else choosePrice">{{ food.price | number}}</span>
+                    <ng-template #choosePrice>
+                      <span class="h4" style="color: orange;">ເລືອກ</span>
+                    </ng-template>
+                  </div>
+                  <img src="{{ food.food_photo }}" alt="{{ food.food_name }}" class="img-thumbnail"
+                    (click)="foodChoosed(food)">
+                  <div class="title align-middle">
+                    <span class="h6 font-weight-light">{{ food.food_name }}</span>
+                  </div>
+                </div>
+              </div>
+            </mat-tab>
             <mat-tab *ngFor="let foodCategory of FoodCategories |async" label="{{ foodCategory.foodCategoryNameLao }}">
               <div class="row main-container">
                 <div class="col col-sm-12 col-md-3 shadow item text-center" *ngFor="let food of foods | async">
@@ -24,7 +41,7 @@
           </mat-tab-group>
         </div>
         <div class="col col-md-5">
-          <mat-card>
+          <mat-card class="mainPaymentDiv">
             <mat-card-title>ອາຫານທີ່ເລຶອກໄວ້ </mat-card-title>
             <mat-divider></mat-divider>
             <mat-card-content>
@@ -43,7 +60,7 @@
                 <div class="listDiv">
                   <mat-list-item *ngFor="let cart of carts | async">
                     <div class="row" style="width: 100%;">
-                      <div class="col col-md-3 text-left">{{ cart.food }} {{ cart.subFood }}</div>
+                      <div class="col col-md-3 text-left text-nowrap">{{ cart.food }} {{ cart.subFood }}</div>
                       <div class="col col-md-2 text-right">{{ cart.quantity | number }}</div>
                       <div class="col col-md-2 text-right">{{ cart.price | number }}</div>
                       <div class="col col-md-2 text-right"> {{ cart.total | number }}</div>
